[project]
name = "occupancy"
version = "0.1.0"
description = ""
authors = [
    {name = "Cameron Reid",email = "csreid.cr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pybullet (>=3.2.7,<4.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "ruff (>=0.11.4,<0.12.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "lab (>=8.4,<9.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
[tool.ruff.format]
indent-style = "tab"
